# md2cast

./: .gitignore  LICENSE  README.md  TODO.md  TUTORIAL.md  install.sh  md2cast  md2cast.py  pyproject.toml  uninstall.sh
.github/workflows/: pages.yml
docs/: CNAME  index.html
examples/: README.md  basic-rendered.md  basic.html  directives-rendered.md  directives.html  execute-rendered.md  execute.html  render-rendered.md  render.html
examples/assets/: 01-custom-prompt.cast  01-hello-world.cast  01-simple-command.cast  01-system-info.cast  02-file-listing.cast  02-multiple-commands.cast  02-slow-typing.cast  02-system-info.cast  03-config-block.cast  03-config-example.cast  03-fast-typing.cast  03-working-with-files.cast  04-json-example.cast  04-multi-line-commands.cast  04-output-override.cast  04-view-exec-mode.cast  05-exec-directive.cast  05-final-section.cast  05-mixed-no-exec-override.cast  05-python-code.cast  06-python-code-display.cast  06-stacked-directives.cast  07-pause-test.cast  08-clear-test.cast
tests/: test_md2cast.py
tests/manual/: basic.md  browser.md  directives.md  execute.md  gui.md  instructions.txt  render.md
website/: index.html
