[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md2cast"
version = "0.5.0"
description = "Convert Markdown documentation into asciinema screencasts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    {name = "Mark Amo-Boateng", email = "mark@md2cast.dev"},
]
keywords = ["markdown", "screencast", "asciinema", "terminal", "documentation", "gif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pygments>=2.10",
    "asciinema>=2.0",
]

[project.urls]
Homepage = "https://md2cast.dev"
Repository = "https://github.com/markamo/md2cast"
Issues = "https://github.com/markamo/md2cast/issues"

[project.scripts]
md2cast = "md2cast:main"

[tool.setuptools]
py-modules = ["md2cast"]
